--- a/_toc.yml
+++ b/_toc.yml
@@ -3,5 +3,24 @@
 
 format: jb-book
 root: intro
-chapters:
-- file: markdown
+parts:
+- caption: Vettori
+  chapters:
+  - file: ch/vectors.md
+- caption: Geometria analitica
+  chapters:
+  - file: ch/analytic_geometry
+    sections:
+    - file: ch/analytic_geometry/analytic_geometry_2d/coordinates
+    - file: ch/analytic_geometry/analytic_geometry_2d/points
+    - file: ch/analytic_geometry/analytic_geometry_2d/lines
+    - file: ch/analytic_geometry/analytic_geometry_2d/conics
+- caption: Calcolo infinitesimale
+  chapters:
+  - file: ch/infinitesimal_calculus
+    sections:
+    - file: ch/infinitesimal_calculus/real_funcions
+    - file: ch/infinitesimal_calculus/limits
+    - file: ch/infinitesimal_calculus/derivatives
+    - file: ch/infinitesimal_calculus/integrals
+
