Start working on differential geometry in 2D

--- a/_toc.yml
+++ b/_toc.yml
@@ -16,6 +16,7 @@ parts:
     sections:
     - file: ch/analytic_geometry/analytic_geometry_2d/coordinates
     - file: ch/analytic_geometry/analytic_geometry_2d/points
+    - file: ch/analytic_geometry/analytic_geometry_2d/curves
     - file: ch/analytic_geometry/analytic_geometry_2d/lines
     - file: ch/analytic_geometry/analytic_geometry_2d/conics
 - caption: Calcolo infinitesimale
