--- a/_toc.yml
+++ b/_toc.yml
@@ -13,7 +13,7 @@ parts:
 - caption: Geometria analitica
   chapters:
   - file: ch/analytic_geometry
-  - file: ch/analytic_geometry_2d
+  - file: ch/analytic_geometry/analytic_geometry_2d
     sections:
     - file: ch/analytic_geometry/analytic_geometry_2d/coordinates
     - file: ch/analytic_geometry/analytic_geometry_2d/points
@@ -22,7 +22,7 @@ parts:
     - file: ch/analytic_geometry/analytic_geometry_2d/conics
     - file: ch/analytic_geometry/analytic_geometry_2d/conics-cartesian
     - file: ch/analytic_geometry/analytic_geometry_2d/conics-polar
-  - file: ch/analytic_geometry_3d
+  - file: ch/analytic_geometry/analytic_geometry_3d
 - caption: Calcolo infinitesimale
   chapters:
   - file: ch/infinitesimal_calculus
@@ -33,10 +33,10 @@ parts:
     - file: ch/infinitesimal_calculus/integrals
 - caption: Serie e successioni
   chapters:
-  - file: series
+  - file: ch/series
 - caption: Numeri complessi
   chapters:
-  - file: complex
+  - file: ch/complex
 - caption: Algebra lineare
   chapters:
-  - file: linear_algebra
+  - file: ch/linear_algebra
