--- a/_toc.yml
+++ b/_toc.yml
@@ -23,6 +23,12 @@ parts:
     - file: ch/analytic_geometry/analytic_geometry_2d/conics-cartesian
     - file: ch/analytic_geometry/analytic_geometry_2d/conics-polar
   - file: ch/analytic_geometry/analytic_geometry_3d
+    sections:
+    - file: ch/analytic_geometry/analytic_geometry_3d/points
+    - file: ch/analytic_geometry/analytic_geometry_3d/planes
+    - file: ch/analytic_geometry/analytic_geometry_3d/curves
+    - file: ch/analytic_geometry/analytic_geometry_3d/lines
+    - file: ch/analytic_geometry/analytic_geometry_3d/cone
 - caption: Calcolo infinitesimale
   chapters:
   - file: ch/infinitesimal_calculus
