--- a/_toc.yml
+++ b/_toc.yml
@@ -32,8 +32,9 @@ parts:
     - file: ch/analytic_geometry/analytic_geometry_2d/curves
     - file: ch/analytic_geometry/analytic_geometry_2d/lines
     - file: ch/analytic_geometry/analytic_geometry_2d/conics
-    - file: ch/analytic_geometry/analytic_geometry_2d/conics-cartesian
-    - file: ch/analytic_geometry/analytic_geometry_2d/conics-polar
+      sections:
+      - file: ch/analytic_geometry/analytic_geometry_2d/conics-cartesian
+      - file: ch/analytic_geometry/analytic_geometry_2d/conics-polar
   - file: ch/analytic_geometry/analytic_geometry_3d
     sections:
     - file: ch/analytic_geometry/analytic_geometry_3d/points
