--- a/_config.yml
+++ b/_config.yml
@@ -37,6 +37,8 @@ sphinx:
     language: it
     html_show_copyright: false
     html_theme_options:
+      use_issues_button: true
+      use_repository_button: true
       logo:
         image_light: logo.svg
         image_dark: logo-dark.svg
