--- a/_toc.yml
+++ b/_toc.yml
@@ -69,12 +69,17 @@ parts:
   - file: ch/infinitesimal_calculus
     sections:
     - file: ch/infinitesimal_calculus/analysis
+      sections:
+      - file: ch/infinitesimal_calculus/analysis-problems
     - file: ch/infinitesimal_calculus/derivatives
+      sections:
+      - file: ch/infinitesimal_calculus/derivatives-problems
     - file: ch/infinitesimal_calculus/integrals
       sections:
       - file: ch/infinitesimal_calculus/integrals-table
       - file: ch/infinitesimal_calculus/integrals-problems
     - file: ch/ode
+    - file: ch/infinitesimal_calculus/problems
   - file: ch/multivariable-calculus
     sections:
     - file: ch/multivariable-calculus/limits
